--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 canvas{
-	position:absolute;top:50px;left:50%;
+	position:absolute;top:20px;left:50%;
 	transform: translate(-50%, 0);
-	border: 1px solid;cursor:none;
+	border: 2px #777 solid;cursor:none;
+	box-shadow: 0px 0px 250px black inset;
 	background:#333;
 }
