--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
-canvas{
+#mainc{
+	position:absolute;top:20px;left:50%;
+	transform: translate(-50%, 0);
+	border: 2px #777 solid;cursor:none;
+	box-shadow: 0px 0px -100px 350px rgba(0,0,0,1) inset;
+	background:#333;
+	image-rendering: optimizeSpeed;
+	image-rendering: -moz-crisp-edges;
+	image-rendering: -webkit-optimize-contrast;
+	image-rendering: optimize-contrast;
+	-ms-interpolation-mode: nearest-neighbor;
+}
+#secondc{
 	position:absolute;top:20px;left:50%;
 	transform: translate(-50%, 0);
 	border: 2px #777 solid;cursor:none;
 	box-shadow: 0px 0px 250px black inset;
-	background:#333;
+	pointer-events: none;
 }
 body{
 	background:#000;
